--- a/ImageReconstruction/Reconstruction/CMakeLists.txt
+++ b/ImageReconstruction/Reconstruction/CMakeLists.txt
@@ -5,14 +5,17 @@ set(projectName JPetRecoImageTools)
 ######################################################################
 project(${projectName} CXX) # using only C++
 
-file(GLOB SOURCES JPet*/*.cpp)
-file(GLOB HEADERS JPet*/*.h)
-file(GLOB UNIT_TEST_SOURCES JPet*/*Test.cpp)
-list(REMOVE_ITEM SOURCES ${UNIT_TEST_SOURCES})
-
-include_directories(${Framework_INCLUDE_DIRS})
-add_definitions(${Framework_DEFINITIONS})
-
+set(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetRecoImageTools.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetSinogramType.cpp)
+set(HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterCosine.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterHamming.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterInterface.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterNone.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterRamLak.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterRidgelet.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetFilterSheppLogan.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetRecoImageTools.h
+            ${CMAKE_CURRENT_SOURCE_DIR}/${projectName}/JPetSinogramType.h)
 ######################################################################
 ### Configure FFTW(based on: https://github.com/egpbos/findFFTW)
 ######################################################################
@@ -72,10 +75,17 @@ set(HEADERS_WITH_DICTIONARY_REQUIRED
 
 set(LINKDEF_NAME ImageReconstruction_LinkDef.h)
 
+get_target_property(DICTIONARY_INCLUDES JPetFramework::JPetFramework INTERFACE_INCLUDE_DIRECTORIES)
+list(APPEND DICTIONARY_INCLUDES /home/grey/jpet/j-pet-framework/build/install/include/)
+foreach(dict ${DICTIONARY_INCLUDES})
+  include_directories(${dict})  # Ugly include directories from JPetFramework for dictionaries
+endforeach(dict ${DICTIONARY_INCLUDES})
+
 include_directories(ROOT_BUG) # Fix bug in NewMacros Root file
 ROOT_GENERATE_DICTIONARY(${DICTIONARY_NAME} ${HEADERS_WITH_DICTIONARY_REQUIRED}
-  LINKDEF ${LINKDEF_NAME}
-  OPTIONS ${DICTIONARY_INCLUDES})
+  LINKDEF ${LINKDEF_NAME})
+
+add_library(${projectName} SHARED ${SOURCES} ${DICTIONARY_NAME}.cxx ${HEADERS})
 
 add_library(${projectName} SHARED ${SOURCES} ${DICTIONARY_NAME}.cxx ${HEADERS})
 target_link_libraries(${projectName}
@@ -84,3 +94,9 @@ target_link_libraries(${projectName}
 set_target_properties(${projectName} PROPERTIES
     INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
 )
+
+target_include_directories(${projectName} PUBLIC
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${projectName}>
+                           $<BUILD_INTERFACE:${FFTW_INCLUDE_DIRS}>)
+target_link_libraries(${projectName} PRIVATE JPetFramework::JPetFramework ${FFTW_LIBRARIES})
